Fixed file Structure

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>Thank you for celebrating with us!</p>
     
     <div>
-        <a href="/upload.html" class="btn">Upload Photos</a>
-        <a href="/gallery.html" class="btn">View Gallery</a>
+        <a href="upload.html" class="btn">Upload Photos</a>
+        <a href="gallery.html" class="btn">View Gallery</a>
     </div>
 </body>
 </html>
