--- a/index.html
+++ b/index.html
@@ -135,38 +135,37 @@
     <div class="container">
         <header>
             <div class="hearts">💕</div>
-            <h1>Maha & Umer</h1>
+            <h1>Maha & Umar</h1>
             <div class="subtitle">Are Getting Married!</div>
-            <div class="date"> January 9, 2026 | ⏰ 8:00 PM</div>
+            <div class="date"> January 09, 2025 |  8:00 PM</div>
         </header>
 
         <div class="floral-decoration">✨ • 💍 • ✨</div>
 
         <div class="buttons">
-            <a href="upload.html" class="btn"> Upload Photos</a>
-            <a href="gallery.html" class="btn"> View Gallery</a>
+            <a href="upload.html" class="btn">📸 Upload Photos</a>
         </div>
 
         <div class="wedding-details">
             <div class="detail-item">
-                <strong> Venue:</strong> ------------------
+                <strong>Venue:</strong> -----------------
             </div>
             <div class="detail-item">
-                <strong> Dress Code:</strong> ------------------
+                <strong>Dress Code:</strong> -----------------
             </div>
             <div class="detail-item">
-                <strong> Mehndi: ---------
+                <strong>Reception:</strong> -----------------
             </div>
             <div class="detail-item">
-                <strong> RSVP:</strong> Please confirm by November 1st, 2025
+                <strong>RSVP:</strong> -----------------
             </div>
         </div>
 
         <div class="floral-decoration">🌸 • 💑 • 🌸</div>
 
         <footer>
-            <p>Thank you for being part of our special day! </p>
-            <p>We can't wait to celebrate with you!</p>
+            <p>-----------------</p>
+            <p>-----------------</p>
         </footer>
     </div>
 </body>
